Set updateBy to management actions